--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.24.0
-autogen==0.2.5
-langchain==0.0.304
-langchain-openai==0.0.2
-langchain-community==0.0.5
-openai==0.28.0
-chromadb==0.4.6
-tiktoken==0.5.1
-requests==2.31.0
-tenacity==8.2.2
-python-dotenv==1.0.0
+streamlit
+autogen
+langchain
+langchain-openai
+langchain-community
+openai
+chromadb
+tiktoken
+requests
+tenacity
+python-dotenv
